--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   margin: 0;
 }
 
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
