--- a/src/components/country/country.css
+++ b/src/components/country/country.css
@@ -7,19 +7,12 @@
   min-width: 250px;
   max-width: 550px;
 }
-
-/* @media only screen and (min-width: 720px) {
-  .country {
-    width: 550px;
-  }
+h2,
+h3,
+h4,
+p,
+img {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 10px;
 }
-@media only screen and (max-width: 500px) {
-  .country {
-    width: 450px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .country {
-    width: 600px;
-  }
-} */
